--- a/app/scss/_feature.scss
+++ b/app/scss/_feature.scss
@@ -1,5 +1,5 @@
 .feature {
-    background-color: $lightGrayishBlue;
+    background-color: #ffffff;
     text-align: center;
 
     @include breakpoint-up(medium){
