--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -3,7 +3,7 @@
 
     &__image {
         position: relative;
-        background-image: url(images/hero1.png);
+        background-image: url('/images/hero1.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
