--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -3,7 +3,7 @@
 
     &__image {
         position: relative;
-        background-image: url(images/hero1.png);
+        background-image: url('images/hero1.png');
         background-size: cover;
         background-repeat: no-repeat;
         background-position: center center;
@@ -16,7 +16,7 @@
             position: relative;
             height: 100%;
             width: 100%;
-            background-image: url(images/hero1.png);
+            background-image: url('images/hero1.png');
             background-size: 90%;
             background-repeat: no-repeat;
             background-position: center top;
