--- a/app/scss/_hero.scss
+++ b/app/scss/_hero.scss
@@ -105,6 +105,7 @@
     .input-field {
         width: 100%;
         padding: 10px;
+        padding-left: 38px;
         text-align:start;
     }
 
