--- a/app/scss/_article.scss
+++ b/app/scss/_article.scss
@@ -1,7 +1,7 @@
 .articles {
 	background-color:white;
 	position: relative;
-	background-image: url(images/atcl_bg.png);
+	background-image: url('/images/atcl_bg.png');
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
